--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "type": "commonjs",
   "dependencies": {
+    "@octokit/rest": "^22.0.1",
     "@sentry/node": "^10.30.0",
     "axios": "^1.13.2",
+    "discord-html-transcripts": "^3.2.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "mongodb": "^7.0.0",
